# Automaton

./: .gitignore  README.md  backtest.py  main.py  pyproject.toml
data/: ibov.xlsx
src/domain/entities/: adviser.py  portfolio.py
src/services/backtest/: backtest.py
src/services/manager/: manager.py
src/services/strategies/: moving.py
