[tool.poetry]
name = "automaton"
version = "0.1.0"
description = "My personal portfolio automate manager"
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
pandas = "^1.3.4"
plotly = "^5.3.1"
yfinance = "^0.1.64"
ipykernel = "^6.4.2"
pydantic = "^1.8.2"
openpyxl = "^3.0.9"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
